fix: update CORS configuration to allow all origins and modify dev script for Vite